Arreglado el problema en la duplicación del config data api para kubernetes. ver https://stackoverflow.com/questions/77516270/spring-cloud-kubernetes-app-failed-to-start

--- a/secret.yaml
+++ b/secret.yaml
@@ -6,7 +6,6 @@ type: Opaque
 data:
   username: cm9vdA==
   password: Q2R1YzE5Nzgu
-
 ---
 apiVersion: v1
 kind: Secret
@@ -15,4 +14,13 @@ metadata:
 type: Opaque
 data:
   username: cG9zdGdyZXM=
+  password: Q2R1YzE5Nzgu
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: api-catalogs
+type: Opaque
+data:
+  username: cm9vdA==
   password: Q2R1YzE5Nzgu
