--- a/api-catalogs/pom.xml
+++ b/api-catalogs/pom.xml
@@ -30,11 +30,12 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
-
+		<!--
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+		-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -72,12 +73,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-		<!--
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+			<!--<scope>compile</scope>-->
+		</dependency>
+
 		<dependency>
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-tracing</artifactId>
 		</dependency>
-		-->
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -88,7 +95,7 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<!--
+
 			<dependency>
 				<groupId>io.micrometer</groupId>
 				<artifactId>micrometer-tracing-bom</artifactId>
@@ -96,7 +103,6 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			-->
 		</dependencies>
 	</dependencyManagement>
 
