--- a/api-catalogs/src/main/resources/application-devlocal.properties
+++ b/api-catalogs/src/main/resources/application-devlocal.properties
@@ -1,3 +1,5 @@
+server.port=${PORT:8003}
+
 spring.datasource.url=jdbc:mysql://${DB_HOST:10.211.55.2:31177}/${DB_DATABASE:msvc_usuarios}
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:Cduc1978.}
