--- a/api-catalogs/src/main/resources/application.properties
+++ b/api-catalogs/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=api-catalogs
-server.port=${PORT:8001}
+
+#spring.profiles.active=devcloud
 spring.profiles.active=devlocal
 
 spring.datasource.url=jdbc:mysql://${DB_HOST:10.211.55.2:31177}/${DB_DATABASE:msvc_usuarios}
