--- a/configmap.yaml
+++ b/configmap.yaml
@@ -40,3 +40,12 @@ data:
   #username: postgres
   #password: Cduc1978.
   usuario_url: msvc-usuarios:8001
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: api-catalogs
+data:
+  port: "8003"
+  db_host: mysql8:3306
+  database: msvc_usuarios
