--- a/api-catalogs/src/main/resources/application.properties
+++ b/api-catalogs/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 
 logging.level.root=info
+#logging.level.root=warn
 logging.level.org.hibernate.SQL=debug
 logging.file.path=/app/logs
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
