--- a/mysql-pvc.yaml
+++ b/mysql-pvc.yaml
@@ -5,10 +5,10 @@ metadata:
 spec:
   volumeName: mysql-pv
   accessModes:
-    - ReadWriteMany
-   #- ReadWriteOnce
+   # - ReadWriteMany
+   - ReadWriteOnce
   #storageClassName: standard
-  storageClassName: ""
+  storageClassName: standard
   resources:
     requests:
       storage: 2Gi
