--- a/api-catalogs/Dockerfile
+++ b/api-catalogs/Dockerfile
@@ -6,20 +6,17 @@ FROM eclipse-temurin:21.0.2_13-jdk-alpine as builder
 ARG MSVC_NAME
 WORKDIR /app/$MSVC_NAME
 #COPY ./target/api-catalogs-0.0.1-SNAPSHOT.jar .
-
 #Descarga de dependencias con Maven
 COPY ./pom.xml /app
 COPY ./$MSVC_NAME/.mvn ./.mvn
 COPY ./$MSVC_NAME/mvnw .
+RUN chmod +x ./mvnw
 COPY ./$MSVC_NAME/pom.xml .
 RUN ./mvnw clean package -Dmaven.test.skip -Dmaven.main.skip -Dspring-boot.repackage.skip && rm -r ./target
 #RUN ./mvnw dependency:go-offline
-
 #Compilar fuentes y empaquetar
 COPY ./$MSVC_NAME/src ./src
 RUN ./mvnw clean package -DskipTests
-
-
 FROM eclipse-temurin:21.0.2_13-jdk-alpine
 ARG MSVC_NAME
 WORKDIR /app
