--- a/mysql-pv.yaml
+++ b/mysql-pv.yaml
@@ -8,13 +8,13 @@ spec:
   volumeMode: Filesystem
   #For minikube: storageClassName: standard
   #For AWS:
-  storageClassName: ""
+  storageClassName: standard
   accessModes:
-    #- ReadWriteOnce
-    - ReadWriteMany
-  csi:
-    driver: efs.csi.aws.com
-    volumeHandle: fs-0c99434453833947c
-#  hostPath:
-#    path: /var/lib/mysql
-#    type: DirectoryOrCreate
+    - ReadWriteOnce
+    #- ReadWriteMany
+  #csi:
+  #  driver: efs.csi.aws.com
+  #  volumeHandle: fs-0c99434453833947c
+  hostPath:
+    path: /var/lib/mysql
+    type: DirectoryOrCreate
