--- a/api-catalogs/src/main/resources/application.properties
+++ b/api-catalogs/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-catalogs
 
-#spring.profiles.active=devcloud
-spring.profiles.active=devlocal
+spring.profiles.active=devcloud
+#spring.profiles.active=devlocal
 
 spring.datasource.url=jdbc:mysql://${DB_HOST:10.211.55.2:31177}/${DB_DATABASE:msvc_usuarios}
 spring.datasource.username=${DB_USERNAME:root}
