Se implementa llamada a SP con parámetros con tipos complejos

--- a/data-spec-example/src/main/resources/application.properties
+++ b/data-spec-example/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.third-datasource.url=jdbc:oracle:thin:@lpg9sh739xozptqz_medium?TNS_ADMIN=
 spring.third-datasource.username=${DB_USERNAME:admin}
 spring.third-datasource.password=${DB_PASSWORD:Cduc1978oracle.}
 spring.third-datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.third-datasource.hikari.data-source-properties.oracle.jdbc.implicitStatementCacheSize=10
+spring.third-datasource.hikari.data-source-properties.oracle.jdbc.defaultConnectionValidation=LOCAL
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 #spring.jpa.generate-ddl=true
 
