--- a/data-spec-example/pom.xml
+++ b/data-spec-example/pom.xml
@@ -119,6 +119,11 @@
 			<type>pom</type>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
  </dependencies>
 
 	<build>
