--- a/data-spec-example/pom.xml
+++ b/data-spec-example/pom.xml
@@ -110,14 +110,43 @@
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
 			<scope>runtime</scope>
-		  </dependency>
+		</dependency>
 		-->
+		
+		
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11-production</artifactId>
 			<version>21.5.0.0</version>
 			<type>pom</type>
 		</dependency>
+		
+		<!--
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11-production</artifactId>
+			<version>23.3.0.23.09</version>
+			<type>pom</type>
+		</dependency>
+		-->
+		
+
+		<!--
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>23.3.0.23.09</version>
+		</dependency>
+		-->
+		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
+		<!--
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11</artifactId>
+			<version>23.3.0.23.09</version>
+		</dependency>
+		-->
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
