--- a/data-spec-example/src/main/resources/application.properties
+++ b/data-spec-example/src/main/resources/application.properties
@@ -21,10 +21,17 @@ spring.second-datasource.password=${DB_PASSWORD:Cduc1978.}
 spring.second-datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgresPlusDialect
 
+
 spring.third-datasource.jdbcUrl=jdbc:oracle:thin:@lpg9sh739xozptqz_medium?TNS_ADMIN=/Users/rodrigolopez/Downloads/Wallet_LPG9SH739XOZPTQZ
 spring.third-datasource.url=jdbc:oracle:thin:@lpg9sh739xozptqz_medium?TNS_ADMIN=/Users/rodrigolopez/Downloads/Wallet_LPG9SH739XOZPTQZ
 spring.third-datasource.username=${DB_USERNAME:admin}
 spring.third-datasource.password=${DB_PASSWORD:Cduc1978oracle.}
+
+#spring.third-datasource.jdbc-url=jdbc:oracle:thin:@10.1.5.102:1521/INSISDB.SURAUYDEVPUB2.SURAUYDEVVCN.ORACLEVCN.COM
+#spring.third-datasource.url=jdbc:oracle:thin:@10.1.5.102:1521/INSISDB.SURAUYDEVPUB2.SURAUYDEVVCN.ORACLEVCN.COM
+#spring.third-datasource.username=INSIS_CUST_SURA_UY
+#spring.third-datasource.password=ASKHJYYWBPBZ
+
 spring.third-datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.third-datasource.hikari.data-source-properties.oracle.jdbc.implicitStatementCacheSize=10
 spring.third-datasource.hikari.data-source-properties.oracle.jdbc.defaultConnectionValidation=LOCAL
@@ -32,7 +39,7 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 #spring.jpa.generate-ddl=true
 
 spring.h2.console.enabled=true
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
